# MetroGnome

./: .aiignore  .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL-linux.md  INSTALL-macOS.md  LICENSE  MetroGnomeVSTiTestReport.md  PROJECT_PLAN.md  REQUIREMENTS.md  RT_SAFETY.md
.github/workflows/: ci.yml
docs/: MetroGnome-UI-Layout-Update.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Timing.h  TimingTests.cpp
